# ucl

./: .env.example  CHANGELOG.md  DEVELOPMENT.md  HOW_IT_WORKS.md  INSTALLATION.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: multi_provider_examples.py
scripts/: auto_changelog.py  auto_release.py
src/ucl/: __about__.py  config.py  core.py  git.py  utils.py
src/ucl/formatting/: formatters.py
tests/: test_ai_utils.py  test_basic.py  test_config.py  test_core.py  test_formatters.py  test_git.py  test_utils.py
