[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ucl"
dynamic = ["version"]
description = "update changelog"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["changelog", "ai", "git"]
authors = [
  { name = "cellwebb", email = "cellwebb@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Version Control",
  "Topic :: Utilities"
]
dependencies = [
    "aisuite>=0.1.7",
    "black>=25.1.0",
    "click>=8.1.8",
    "docstring_parser>=0.16",
    "isort>=6.0.1",
    "python-dotenv>=1.1.0",
    "rich>=13.9.4",
    "pydantic>=2.10.6",
]

[project.scripts]
ucl = "ucl.core:cli"

[project.optional-dependencies]
providers = [
    "aisuite[anthropic,openai,groq,mistral]",
]
dev = [
    "bump-my-version",
    "codecov>=2.1.13",
    "flake8>=7.1.2",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]
all = [
    "aisuite[all]",
]

[project.urls]
Documentation = "https://github.com/cellwebb/ucl#readme"
Issues = "https://github.com/cellwebb/ucl/issues"
Source = "https://github.com/cellwebb/ucl"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/'''

[tool.bump-my-version]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bump-my-version.files]]
filename = "src/ucl/__about__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bump-my-version.files]]
filename = "pyproject.toml"
search = 'current_version = "{current_version}"'
replace = 'current_version = "{new_version}"'

[tool.coverage.run]
source_pkgs = ["ucl", "tests"]
branch = true
parallel = true
omit = [
  "src/ucl/__about__.py",
]

[tool.coverage.paths]
ucl = ["src/ucl", "*/ucl/src/ucl"]
tests = ["tests", "*/ucl/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "pass",
  "raise ImportError",
  "except ImportError"
]
show_missing = true
skip_empty = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", ".venv", "venv", "build", "dist"]
per-file-ignores = { "__init__.py" = ["F401"], "tests/*.py" = ["E501"] }

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
only-packages = true
skip-excluded = true

[tool.hatch.build.targets.wheel]
packages = ["src/ucl"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "tests/",
    "*.tests",
    "*.tests.*",
]

[tool.hatch.envs.default]
dependencies = [
    "aisuite[all]",
    "black>=25.1.0",
    "bump-my-version",
    "isort>=6.0.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "codecov>=2.1.13",
    "flake8>=7.1.2",
    "pydantic>=2.10.6",
    "mypy",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests} && coverage report"
lint = [
    "black .",
    "isort .",
    "flake8 .",
]
format = [
    "black .",
    "isort .",
]
type-check = "mypy src/ucl tests"

[tool.hatch.env]
path = ".venv"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--cov=ucl", "--cov-report=term-missing"]

[template.plugins.default]
tests = true
src-layout = true
